everything works as intended

--- a/views/index.html
+++ b/views/index.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <link href="index.css" rel="stylesheet">
+        <link href="index.css" type='text/css' rel="stylesheet">
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     </head>
     <body>
         <audio autoplay loop>
-            <source src="../assets/monkeynoises.ogg" type="audio/ogg">
+            <source src="assets/monkeynoises.ogg" type="audio/ogg">
         </audio>
         <div class="grid-container">
             <div class="grid-item">
