now includes favicon, title and other formalities

--- a/views/index.html
+++ b/views/index.html
@@ -1,7 +1,10 @@
 <!DOCTYPE html>
-<html>
+<html lang='en'>
     <head>
+        <meta charset="utf-8">
+        <title>Some monkeys typing</title>
         <link href="index.css" type='text/css' rel="stylesheet">
+        <link href="assets/favicon.ico" rel="icon">
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     </head>
     <body>
